# pycsp3-scheduling

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: Makefile  changelog.md  cheatsheet.md  conf.py  contributing.md  index.rst  requirements.txt  roadmap.rst
docs/_static/: custom.css
docs/_templates/: page.html
docs/api/: constraints.md  expressions.md  functions.md  interop.md  variables.md
docs/examples/: flexible_job_shop.ipynb  flexible_job_shop.md  flexible_job_shop_tutorial.ipynb  job_shop.ipynb  job_shop.md  job_shop_tutorial.ipynb  multi_resource_tutorial.ipynb  rcpsp.ipynb  rcpsp.md  setup_times_tutorial.ipynb  spanning_sync_tutorial.ipynb  vrptw.ipynb
docs/tutorials/: getting_started.ipynb  index.md
docs/user_guide/: getting_started.md  installation.md  modeling_guide.md  scheduling_concepts.md
examples/: EmployeeScheduling.py  FlexibleJobShop.py  FlowShop.py  OpenShop.py  RCPSP.py  SchedulingJS.py  VRPTW.py
examples/models/: README.md  models.json
examples/models/realistic/AircraftLanding/: AircraftLanding.py
examples/models/realistic/CyclicRCPSP/: CyclicRCPSP.py
examples/models/realistic/FlexibleJobshop/: FlexibleJobshop.py
examples/models/realistic/MRCPSP/: MRCPSP.py
examples/models/realistic/MSPSP/: MSPSP.py
examples/models/realistic/RCPSP/: RCPSP.py
examples/models/realistic/SchedulingFS/: SchedulingFS.py
notebooks/: 01_getting_started.ipynb  02_job_shop.ipynb  03_flexible_job_shop.ipynb  04_rcpsp.ipynb  05_vrptw.ipynb  flexible_job_shop_tutorial.ipynb  job_shop_tutorial.ipynb  multi_resource_tutorial.ipynb  rcpsp_tutorial.ipynb  setup_times_tutorial.ipynb  spanning_sync_tutorial.ipynb
pycsp3_scheduling/: __init__.py  interop.py  visu.py
pycsp3_scheduling/constraints/: __init__.py  _pycsp3.py  bounds.py  chain.py  cumulative.py  forbidden.py  grouping.py  overlap.py  precedence.py  presence.py  sequence.py
pycsp3_scheduling/expressions/: __init__.py  aggregate.py  element.py  interval_expr.py  sequence_expr.py
pycsp3_scheduling/functions/: __init__.py  cumul_functions.py  state_functions.py
pycsp3_scheduling/output/: __init__.py
pycsp3_scheduling/solvers/: __init__.py
pycsp3_scheduling/solvers/adapters/: __init__.py
pycsp3_scheduling/variables/: __init__.py  interval.py  sequence.py
tests/: __init__.py  conftest.py  test_aggregate.py  test_bounds.py  test_chain.py  test_constraints.py  test_cumulative.py  test_expressions.py  test_forbidden.py  test_grouping.py  test_interop.py  test_interval.py  test_overlap.py  test_presence.py  test_priority1_constraints.py  test_sequence.py  test_sequence_constraints.py  test_state_functions.py  test_visu.py
(+13 files in other folders)
